# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//foundation/aafwk/standard/feature.gni")

group("faceauth_framework_group") {
  deps = []
  if (ability_runtime_graphics) {
    deps += [ ":faceauth_framework" ]
  }
}

config("faceauth_framework_public_config") {
  include_dirs =
      [ "//base/user_iam/face_auth/interfaces/innerkits/faceauth/include" ]
}

ohos_shared_library("faceauth_framework") {
  sources = [
    "//base/user_iam/face_auth/interfaces/innerkits/faceauth/src/face_auth_client.cpp",
    "//base/user_iam/face_auth/interfaces/innerkits/faceauth/src/face_auth_innerkit.cpp",
    "//base/user_iam/face_auth/interfaces/innerkits/faceauth/src/face_auth_proxy.cpp",
    "//base/user_iam/face_auth/interfaces/innerkits/faceauth/src/face_auth_stub.cpp",
  ]

  public_configs = [ ":faceauth_framework_public_config" ]

  include_dirs = [
    "//base/user_iam/face_auth/common/include",
    "//base/user_iam/face_auth/interfaces/innerkits/faceauth/include",
    "//foundation/multimedia/camera_standard/interfaces/inner_api/native/camera/include",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/base/include",
    "//utils/native/base/include",
  ]

  if (ability_runtime_graphics) {
    deps = [ "//foundation/graphic/graphic:libsurface" ]
  }

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]

  subsystem_name = "useriam"
  part_name = "face_auth"
}
