# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

ohos_source_set("faceauth_framework_stub_fuzzer") {
  stack_protector_ret = true
  sources = [ "../../../frameworks/ipc/src/face_auth_stub.cpp" ]

  configs = [ "../../../common:iam_log_config" ]

  public_configs =
      [ "../../../frameworks/ipc:faceauth_framework_public_config" ]

  include_dirs = [
    "../../../common/utils",
    "../../../common/inc",
  ]

  external_deps = [
    "hilog:libhilog",
    "ipc:ipc_single",
  ]

  if (defined(global_parts_info.graphic_graphic_2d)) {
    external_deps += [ "graphic_2d:surface" ]
  }

  subsystem_name = "useriam"
  part_name = "face_auth"
}

ohos_source_set("faceauthservice_source_set_fuzzer") {
  stack_protector_ret = true
  sources = [
    "../../../services/src/face_auth_driver_hdi.cpp",
    "../../../services/src/face_auth_executor_callback_hdi.cpp",
    "../../../services/src/face_auth_executor_hdi.cpp",
    "../../../services/src/face_auth_interface_adapter.cpp",
    "../../../services/src/face_auth_service.cpp",
    "../../../services/src/sa_command_manager.cpp",
    "../../../services/src/screen_brightness_manager.cpp",
    "../../../services/src/service_ex_manager.cpp",
  ]

  public_configs = [ "../../../services:faceauthservice_config" ]

  deps = [ "../common_fuzzer:faceauth_framework_stub_fuzzer" ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "drivers_interface_camera:libbuffer_producer_sequenceable_1.0",
    "drivers_interface_face_auth:libface_auth_proxy_1.1",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "user_auth_framework:userauth_executors",
  ]

  if (defined(global_parts_info.graphic_graphic_2d)) {
    external_deps += [ "graphic_2d:surface" ]
  }

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = "useriam"
  part_name = "face_auth"
}
