# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/aafwk/standard/aafwk.gni")

ohos_fuzztest("FaceAuthServiceFuzzTest") {
  module_out_path = "useriam/face_auth"
  fuzz_config_file =
      "//base/user_iam/face_auth/test/fuzztest/face_auth_service_fuzzer"
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  include_dirs = [
    "//base/user_iam/face_auth/common/inc",
    "//base/user_iam/user_auth/common/logs",
    "//base/user_iam/user_auth/common/utils",
    "//base/user_iam/face_auth/services/inc",
  ]

  sources = [ "face_auth_service_fuzzer.cpp" ]

  deps = [
    "//base/user_iam/face_auth/frameworks/face_auth:faceauth_framework",
    "//base/user_iam/face_auth/services:faceauthservice",
    "//base/user_iam/user_auth/common:iam_test",
  ]

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
    "utils_base:utils",
  ]

  if (ability_runtime_graphics) {
    external_deps += [ "graphic_standard:surface" ]
  }
}
