# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

ohos_fuzztest("FaceAuthExecutorHdiFuzzTest") {
  module_out_path = "useriam/face_auth"
  fuzz_config_file =
      "//base/useriam/face_auth/test/fuzztest/faceauthexecutorhdi_fuzzer"
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  include_dirs = [
    "../../../common/inc",
    "../../../common/logs",
    "../../../common/utils",
    "../../../frameworks/ipc/inc",
    "../../../services/inc",
    "../iamfuzz",
  ]

  sources = [
    "../../../frameworks/ipc/src/face_auth_stub.cpp",
    "../../../services/src/face_auth_driver_hdi.cpp",
    "../../../services/src/face_auth_executor_callback_hdi.cpp",
    "../../../services/src/face_auth_executor_hdi.cpp",
    "../../../services/src/face_auth_interface_adapter.cpp",
    "../../../services/src/face_auth_service.cpp",
    "../iamfuzz/iam_fuzz_test.cpp",
    "face_auth_executor_hdi_fuzzer.cpp",
  ]

  external_deps = [
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "c_utils:utils",
    "drivers_interface_face_auth:libface_auth_proxy_1.0",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "user_auth_framework:userauth_executors",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = "useriam"
  part_name = "face_auth"
}
