# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("//foundation/ability/ability_runtime/ability_runtime.gni")

ohos_fuzztest("FaceAuthServiceFuzzTest") {
  module_out_path = "useriam/face_auth"
  fuzz_config_file =
      "//base/useriam/face_auth/test/fuzztest/faceauthservice_fuzzer"
  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  include_dirs = [
    "../../../common/inc",
    "../../../common/logs",
    "../../../common/utils",
    "../../../services/inc",
    "../iamfuzz",
  ]

  sources = [
    "../iamfuzz/iam_fuzz_test.cpp",
    "face_auth_service_fuzzer.cpp",
  ]

  deps = [
    "../../../frameworks/ipc:faceauth_framework",
    "../../../services:faceauthservice",
  ]

  external_deps = [
    "hilog_native:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
  ]

  if (ability_runtime_graphics) {
    external_deps += [ "graphic_standard:surface" ]
  }

  subsystem_name = "useriam"
  part_name = "face_auth"
}
