# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")

ohos_fuzztest("FaceAuthServiceFuzzTest") {
  branch_protector_ret = "pac_ret"
  module_out_path = "face_auth/face_auth"
  fuzz_config_file = "../faceauthservice_fuzzer"

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]

  include_dirs = [ "../iamfuzz" ]

  sources = [
    "../iamfuzz/iam_fuzz_test.cpp",
    "face_auth_service_fuzzer.cpp",
  ]

  deps = [
    "../common_fuzzer:faceauth_framework_stub_fuzzer",
    "../common_fuzzer:faceauthservice_source_set_fuzzer",
  ]

  external_deps = [
    "drivers_interface_face_auth:libface_auth_proxy_1.1",
    "graphic_surface:surface",
    "hilog:libhilog",
    "user_auth_framework:userauth_executors",
  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = "useriam"
  part_name = "face_auth"
}
