# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/face_auth/useriam.gni")
import("//build/ohos.gni")

group("napi_packages") {
  deps = [ "//base/user_iam/face_auth/interfaces/kits/napi/faceauth_mgr:userauth",
  "//base/user_iam/face_auth/interfaces/kits/napi/faceauth_mgr:enroll" ]
}

config("face_auth_napi_config") {
  visibility = [ ":*" ]

  include_dirs = []

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  defines = [
    "APP_LOG_TAG = \"FaceAuth\"",
    "LOG_DOMAIN = 0xD002422",
  ]
}

config("face_auth_napi_public_config") {
  visibility = [ ":*" ]

  include_dirs = [
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler/include",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy/include",
    "//foundation/ace/napi/interfaces/kits",
    "//third_party/json/single_include",
    "//third_party/node/src",
    "//utils/system/safwk/native/include",
    "//foundation/communication/dsoftbus/interfaces/kits/transport",
    "//foundation/communication/dsoftbus/interfaces/kits/common",
    "//foundation/communication/dsoftbus/interfaces/kits/bus_center",
    "//third_party/json/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base/include",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core/include/bundlemgr",
    "//foundation/aafwk/standard/interfaces/innerkits/ability_manager/include",
    "//base/user_iam/face_auth/interfaces/kits/napi/faceauth_mgr",
    "./",
  ]
}

ohos_shared_library("userauth") {


  sources = [
    "faceauth_mgr.cpp",
    "faceauth_native_event.cpp",
  ]

  configs = [ ":face_auth_napi_config" ]

  public_configs = [ ":face_auth_napi_public_config" ]

  deps = [
    "${useriam_common_path}:faceauth_common",
    "${useriam_auth_kits_path}:faceauth_auth_kits",
    "${face_auth_innerkits_path}:face_auth_innerkits",
    "//base/notification/ans_standard/frameworks/ans/core:ans_core",
    "//base/notification/ans_standard/frameworks/wantagent:wantagent_innerkits",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/ace/napi:ace_napi",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
    "//foundation/graphic/standard:libsurface",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [
    "aafwk_standard:want",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module/useriam"
  subsystem_name = "useriam"
  part_name = "faceauth"
}

ohos_shared_library("enroll") {

  sources = [
    "faceauth_mgr.cpp",
    "faceauth_native_event.cpp",
  ]

  configs = [ ":face_auth_napi_config" ]

  public_configs = [ ":face_auth_napi_public_config" ]

  deps = [
    "${useriam_common_path}:faceauth_common",
    "${useriam_auth_kits_path}:faceauth_auth_kits",
    "${face_auth_innerkits_path}:face_auth_innerkits",
    "//base/notification/ans_standard/frameworks/ans/core:ans_core",
    "//base/notification/ans_standard/frameworks/wantagent:wantagent_innerkits",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/ace/napi:ace_napi",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
    "//foundation/graphic/standard:libsurface",
  ]
  cflags_cc = [ "-DHILOG_ENABLE" ]
  external_deps = [
    "aafwk_standard:want",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  relative_install_dir = "module"
  subsystem_name = "useriam"
  part_name = "faceauth"
}
