# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/useriam/faceauth/useriam.gni")
#import("//build/ohos.gni")
import("//build/test.gni")

module_output_path = "faceauth/faceauthtest"

ohos_unittest("face_auth_manager_auth_test") {
  module_out_path = module_output_path
  include_dirs = ["include/face_auth_manager_auth_test.h"]
  sources = [
      "src/face_auth_manager_auth_test.cpp",
      "${face_auth_services_path}/src/face_auth_service.cpp",
        "../../mock/src/mock_bundle_mgr.cpp",
  ]

  configs = [
    "${face_auth_services_path}/test:face_auth_test_config",
  ]


  deps = [
    "${useriam_common_path}:faceauth_common",
    "${face_auth_innerkits_path}:face_auth_innerkits",
    "${face_auth_services_path}:face_auth_services",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
    "//foundation/graphic/standard:libsurface",

    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",

    "aafwk_standard:want",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

ohos_unittest("face_auth_manager_enroll_test") {
  module_out_path = module_output_path
  include_dirs = ["include/face_auth_manager_enroll_test.h"]
  sources = [
      "src/face_auth_manager_enroll_test.cpp",
      "${face_auth_services_path}/src/face_auth_service.cpp",
        "../../mock/src/mock_bundle_mgr.cpp",
  ]

  configs = [
    "${face_auth_services_path}/test:face_auth_test_config",
  ]


  deps = [
    "${useriam_common_path}:faceauth_common",
    "${useriam_auth_kits_path}:faceauth_auth_kits",
    "${face_auth_innerkits_path}:face_auth_innerkits",
    "${face_auth_services_path}:face_auth_services",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
    "//foundation/graphic/standard:libsurface",

    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",

    "aafwk_standard:want",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

ohos_unittest("face_auth_manager_scenario_test") {
  module_out_path = module_output_path
  include_dirs = ["include/face_auth_manager_scenario_test.h"]
  sources = [
      "src/face_auth_manager_scenario_test.cpp",
      "${face_auth_services_path}/src/face_auth_service.cpp",
        "../../mock/src/mock_bundle_mgr.cpp",
  ]

  configs = [
    "${face_auth_services_path}/test:face_auth_test_config",
  ]


  deps = [
    "${useriam_common_path}:faceauth_common",
    "${useriam_auth_kits_path}:faceauth_auth_kits",
    "${face_auth_innerkits_path}:face_auth_innerkits",
    "${face_auth_services_path}:face_auth_services",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//utils/native/base:utils",
    "//foundation/graphic/standard:libsurface",

    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",

    "aafwk_standard:want",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":face_auth_manager_auth_test" ,
           ":face_auth_manager_enroll_test",
           ":face_auth_manager_scenario_test"]
}