# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/user_iam/face_auth/useriam.gni")

#import("//build/ohos.gni")
import("//build/test.gni")
module_output_path = "faceauth/faceauthtest"

ohos_unittest("face_auth_manager_auth_test") {
  module_out_path = module_output_path
  include_dirs = [ "include/face_auth_manager_auth_test.h" ]
  sources = [
    "${face_auth_services_path}/src/face_auth_service.cpp",
    "../../mock/src/mock_bms_adapter.cpp",
    "../../mock/src/mock_bundle_mgr.cpp",
    "src/face_auth_manager_auth_test.cpp",
  ]

  configs = [ "${face_auth_services_path}/test:face_auth_test_config" ]

  deps = [
    "${face_auth_innerkits_path}:face_auth_innerkits",
    "${face_auth_services_path}:face_auth_services",
    "${useriam_common_path}:faceauth_common",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/graphic/standard:libsurface",
    "//utils/native/base:utils",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

ohos_unittest("face_auth_manager_enroll_test") {
  module_out_path = module_output_path
  include_dirs = [
    "include/face_auth_manager_enroll_test.h",
    "//foundation/multimedia/camera_standard/interfaces/inner_api/native/camera/include/",
    "//foundation/multimedia/camera_standard/frameworks/native/metadata/include/",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/base/include/",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/client/include/",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/server/include/",
  ]
  sources = [
    "${face_auth_services_path}/src/face_auth_service.cpp",
    "../../mock/src/mock_bms_adapter.cpp",
    "../../mock/src/mock_bundle_mgr.cpp",
    "src/face_auth_manager_enroll_test.cpp",
  ]

  configs = [ "${face_auth_services_path}/test:face_auth_test_config" ]

  deps = [
    "${face_auth_innerkits_path}:face_auth_innerkits",
    "${face_auth_services_path}:face_auth_services",
    "${useriam_auth_kits_path}:faceauth_auth_kits",
    "${useriam_common_path}:faceauth_common",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/graphic/standard:libsurface",
    "//foundation/multimedia/camera_standard/frameworks/native/camera:camera_framework",
    "//foundation/multimedia/camera_standard/frameworks/native/metadata:metadata",
    "//foundation/multimedia/camera_standard/services/camera_service:camera_service",
    "//utils/native/base:utils",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

ohos_unittest("face_auth_manager_scenario_test") {
  module_out_path = module_output_path
  include_dirs = [
    "include/face_auth_manager_scenario_test.h",
    "//foundation/multimedia/camera_standard/interfaces/inner_api/native/camera/include/",
    "//foundation/multimedia/camera_standard/frameworks/native/metadata/include/",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/base/include/",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/client/include/",
    "//foundation/multimedia/camera_standard/services/camera_service/binder/server/include/",
  ]
  sources = [
    "${face_auth_services_path}/src/face_auth_service.cpp",
    "../../mock/src/mock_bms_adapter.cpp",
    "../../mock/src/mock_bundle_mgr.cpp",
    "src/face_auth_manager_scenario_test.cpp",
  ]

  configs = [ "${face_auth_services_path}/test:face_auth_test_config" ]

  deps = [
    "${face_auth_innerkits_path}:face_auth_innerkits",
    "${face_auth_services_path}:face_auth_services",
    "${useriam_auth_kits_path}:faceauth_auth_kits",
    "${useriam_common_path}:faceauth_common",
    "//base/startup/syspara_lite/interfaces/innerkits/native/syspara:syspara",
    "//foundation/aafwk/standard/interfaces/innerkits/base:base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_base:appexecfwk_base",
    "//foundation/appexecfwk/standard/interfaces/innerkits/appexecfwk_core:appexecfwk_core",
    "//foundation/appexecfwk/standard/interfaces/innerkits/libeventhandler:libeventhandler",
    "//foundation/distributedschedule/safwk/interfaces/innerkits/safwk:system_ability_fwk",
    "//foundation/distributedschedule/samgr/interfaces/innerkits/samgr_proxy:samgr_proxy",
    "//foundation/graphic/standard:libsurface",
    "//foundation/multimedia/camera_standard/frameworks/native/camera:camera_framework",
    "//foundation/multimedia/camera_standard/frameworks/native/metadata:metadata",
    "//foundation/multimedia/camera_standard/services/camera_service:camera_service",
    "//utils/native/base:utils",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "ability_base:want",
    "ability_runtime:app_manager",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "safwk:system_ability_fwk",
    "samgr_standard:samgr_proxy",
  ]
}

group("unittest") {
  testonly = true
  deps = [
    ":face_auth_manager_auth_test",
    ":face_auth_manager_enroll_test",
    ":face_auth_manager_scenario_test",
  ]
}
